testdata/invalid/missing_return.hzn
package probes

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    bpf.current_pid()
}
